<resources>
    <string name="app_name">Rick and Morty 3</string>
    <string name="name">name</string>
    <string name="status">status</string>
    <string name="species">species</string>
    <string name="gender">gender</string>
    <string name="type">type</string>
    <string name="origin">origin</string>
    <string name="location">location</string>
    <string name="character">character</string>
    <string name="locations">location</string>
    <string name="episode">episode</string>
    <string name="search">search</string>
    <string name="dimension">dimension</string>
    <string name="residents">residents</string>
    <string name="air_date">air date</string>
    <string name="episod">episod</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>